--- a/python/fate_client/pipeline/component_define/fate/coordinated_lr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_lr.yaml
@@ -1,5 +1,5 @@
 component:
-  name: hetero_lr
+  name: coordinated_lr
   description: ''
   provider: fate
   version: 2.0.0-alpha
@@ -10,7 +10,7 @@ component:
     - arbiter
   parameters:
     learning_rate_scheduler:
-      type: parameter_learning_rate_scheduler
+      type: LRSchedulerParam
       default:
         method: constant
         scheduler_params:
@@ -19,19 +19,10 @@ component:
       description: learning rate scheduler, select method from {'step', 'linear',
         'constant'}for list of configurable arguments, refer to torch.optim.lr_scheduler
       type_meta:
-        title: parameter_learning_rate_scheduler
-        type: object
-        properties:
-          data:
-            title: Data
-            default:
-              method: constant
-              scheduler_params:
-                gamma: 0.1
-            allOf:
-              - $ref: '#/definitions/LRSchedulerParam'
+        title: LRSchedulerParam
+        $ref: '#/definitions/abc__LRSchedulerParam'
         definitions:
-          LRSchedulerParam:
+          abc__LRSchedulerParam:
             title: LRSchedulerParam
             type: object
             properties:
@@ -42,36 +33,32 @@ component:
               scheduler_params:
                 title: Scheduler Params
                 type: object
+        default:
+          method: constant
+          scheduler_params:
+            gamma: 0.1
+        description: learning rate scheduler, select method from {'step', 'linear',
+          'constant'}for list of configurable arguments, refer to torch.optim.lr_scheduler
     max_iter:
-      type: parameter_max_iter
+      type: ConstrainedNumberMeta
       default: 20
       optional: true
       description: max iteration num
       type_meta:
-        title: parameter_max_iter
-        type: object
-        properties:
-          data:
-            title: Data
-            default: 20
-            exclusiveMinimum: 0
-            type: integer
+        title: ConstrainedNumberMeta
+        exclusiveMinimum: 0
+        type: integer
     batch_size:
-      type: parameter_batch_size
+      type: ConstrainedNumberMeta
       default: 100
       optional: true
       description: batch size, value less or equals to 0 means full batch
       type_meta:
-        title: parameter_batch_size
-        type: object
-        properties:
-          data:
-            title: Data
-            default: 100
-            minimum: -1
-            type: integer
+        title: ConstrainedNumberMeta
+        minimum: -1
+        type: integer
     optimizer:
-      type: parameter_optimizer
+      type: OptimizerParam
       default:
         method: sgd
         penalty: l2
@@ -82,22 +69,10 @@ component:
       optional: true
       description: ''
       type_meta:
-        title: parameter_optimizer
-        type: object
-        properties:
-          data:
-            title: Data
-            default:
-              method: sgd
-              penalty: l2
-              alpha: 1.0
-              optimizer_params:
-                lr: 0.01
-                weight_decay: 0
-            allOf:
-              - $ref: '#/definitions/OptimizerParam'
+        title: OptimizerParam
+        $ref: '#/definitions/abc__OptimizerParam'
         definitions:
-          OptimizerParam:
+          abc__OptimizerParam:
             title: OptimizerParam
             type: object
             properties:
@@ -118,36 +93,34 @@ component:
                 type: object
             required:
               - optimizer_params
+        default:
+          method: sgd
+          penalty: l2
+          alpha: 1.0
+          optimizer_params:
+            lr: 0.01
+            weight_decay: 0
+        description: ''
     tol:
-      type: parameter_tol
+      type: ConstrainedNumberMeta
       default: 0.0001
       optional: true
       description: ''
       type_meta:
-        title: parameter_tol
-        type: object
-        properties:
-          data:
-            title: Data
-            default: 0.0001
-            minimum: 0
-            type: number
+        title: ConstrainedNumberMeta
+        minimum: 0
+        type: number
     early_stop:
-      type: parameter_early_stop
+      type: type
       default: diff
       optional: true
       description: early stopping criterion, choose from {weight_diff, diff, abs,
         val_metrics}
       type_meta:
-        title: parameter_early_stop
-        type: object
-        properties:
-          data:
-            title: Data
-            default: diff
-            type: string
+        title: type
+        type: string
     init_param:
-      type: parameter_init_param
+      type: InitParam
       default:
         method: zeros
         fill_val: 0.0
@@ -155,19 +128,10 @@ component:
       optional: true
       description: Model param init setting.
       type_meta:
-        title: parameter_init_param
-        type: object
-        properties:
-          data:
-            title: Data
-            default:
-              method: zeros
-              fill_val: 0.0
-              fit_intercept: true
-            allOf:
-              - $ref: '#/definitions/InitParam'
+        title: InitParam
+        $ref: '#/definitions/abc__InitParam'
         definitions:
-          InitParam:
+          abc__InitParam:
             title: InitParam
             type: object
             properties:
@@ -185,21 +149,21 @@ component:
                 title: Fit Intercept
                 default: true
                 type: boolean
+        default:
+          method: zeros
+          fill_val: 0.0
+          fit_intercept: true
+        description: Model param init setting.
     threshold:
-      type: parameter_threshold
+      type: ConstrainedNumberMeta
       default: 0.5
       optional: true
       description: predict threshold for binary data
       type_meta:
-        title: parameter_threshold
-        type: object
-        properties:
-          data:
-            title: Data
-            default: 0.5
-            minimum: 0.0
-            maximum: 1.0
-            type: number
+        title: ConstrainedNumberMeta
+        minimum: 0.0
+        maximum: 1.0
+        type: number
   input_artifacts:
     data:
       train_data:
@@ -216,7 +180,7 @@ component:
       validate_data:
         types:
           - dataframe
-        optional: false
+        optional: true
         stages:
           - train
         roles:
@@ -284,14 +248,12 @@ component:
         description: ''
         is_multi: false
     metric:
-      train_output_metric:
+      metric:
         types:
           - json_metric
         optional: false
-        stages:
-          - train
-        roles:
-          - arbiter
-        description: ''
+        stages: [ ]
+        roles: [ ]
+        description: metric, invisible for user
         is_multi: false
 schema_version: v1
