--- a/python/fate_client/pipeline/component_define/fate/intersection.yaml
+++ b/python/fate_client/pipeline/component_define/fate/intersection.yaml
@@ -9,22 +9,20 @@ component:
     - host
   parameters:
     method:
-      type: parameter_method
+      type: str
       default: raw
       optional: true
       description: ''
       type_meta:
-        title: parameter_method
-        type: object
-        properties:
-          data:
-            title: Data
-            default: raw
-            type: string
+        title: str
+        type: string
+        default: raw
+        description: ''
   input_artifacts:
     data:
       input_data:
-        type: dataframe
+        types:
+          - dataframe
         optional: false
         stages:
           - default
@@ -37,7 +35,8 @@ component:
   output_artifacts:
     data:
       output_data:
-        type: dataframe
+        types:
+          - dataframe
         optional: false
         stages:
           - default
@@ -46,7 +45,17 @@ component:
           - host
         description: ''
         is_multi: false
-    model: {}
-    metric: {}
+    model: { }
+    metric:
+      metric:
+        types:
+          - json_metric
+        optional: false
+        stages:
+          - default
+        roles:
+          - guest
+          - host
+        description: metric, invisible for user
+        is_multi: false
 schema_version: v1
-
